<resources>
    <string name="app_name">Spaace</string>
    <string name="facebook_app_id">1525692524411014</string>
    <string name="continue_with_fb">Continue With Facebook</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="passwordAllCaps">PASSWORD</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="RTO">Request Timed Out</string>
    <string name="SERVER_DOWN_MSG">Server down.</string>
    <string name="login_failed">LOGIN FAILED</string>
    <string name="Succeed">SUCCEED</string>
    <string name="create_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="full_nameAllCaps">FULL NAME</string>
    <string name="terms_of_services">Terms of Service and Privacy Policy</string>
    <string name="should_not_be_empty">This field should not be empty</string>
    <string name="email_not_valid">Please input a valid email address</string>
    <string name="api_token_header">L4H2KZLNOugXNnRAs0ny0w==</string>
    <string name="register_failed">Register Failed</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="send_email">Send Email</string>
    <string name="new_resale">New / Resale</string>
    <string name="resale">Resale</string>
    <string name="area_size">Area Size  (m²)</string>
    <string name="key_collection_periode">Key Collection Period</string>
    <string name="loan_required">Loan Required</string>
    <string name="explore">EXPLORE</string>
    <string name="find_pro">FIND A PRO</string>
    <string name="ideas">IDEAS</string>
    <string name="get_quotes">GET A QUOTE</string>
    <string name="store">STORE</string>
    <string name="contact">CONTACT</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="search">Search</string>
    <string name="login_or_signup">Login or Sign Up</string>
    <string name="house_type">House Type</string>
    <string name="bedroom">Bedroom</string>
    <string name="size">Size</string>
    <string name="year_of_completion">Year of Completion</string>
    <string name="style">Style</string>
    <string name="renovation_duration">Renovation Duration</string>
    <string name="design_fees">Design Fees</string>
    <string name="works_included">Works Included</string>
    <string name="about_this_professional">About this professional</string>
    <string name="reviews">Reviews</string>
    <string name="other_project">OTHER PROJECTS BY THIS PROFESSIONAL</string>
    <string name="sms">sms</string>
    <string name="email">Email</string>
    <string name="emailAllCaps">EMAIL</string>
    <string name="default_region">DEFAULT REGION</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Would you like to be notified for new product?</string>
    <string name="yes_notify_me">Yes, notifiy me</string>
    <string name="no">No</string>
    <string name="logging_in">Logging in...</string>


</resources>
