<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:enabled="false"
            android:hint="@string/from"
            android:inputType="text"
            android:singleLine="true"
            android:text="Randy Salazar" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_from">

        <EditText
            android:id="@+id/input_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:enabled="false"
            android:hint="@string/to"
            android:inputType="text"
            android:singleLine="true"
            android:text="help@spaace.com" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_to">

        <EditText
            android:id="@+id/input_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/subject"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_subject">

        <EditText
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="left"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:lines="4" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_message"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/grey_border_transparent_box"
        android:gravity="center"
        android:text="@string/send_email"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</RelativeLayout>