<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_55_transparent_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="72dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="17dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="66dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="67dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yes_notify_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/yes_notify_me"
            android:textAllCaps="true"
            android:textColor="@color/darker_gray"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_notify_mey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_square_light_border"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>