<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/layout_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/form"
            android:background="@android:color/white" />

        <com.jixstreet.spaace.extensions.RoundedImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_add"
            android:layout_centerHorizontal="true"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_profile"
            android:background="@android:color/white"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/full_nameAllCaps"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_full_name">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:enabled="false"
                    android:hint="@string/emailAllCaps"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_email">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableRight="@drawable/ic_show"
                    android:hint="@string/passwordAllCaps"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@string/password"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_password">

                <EditText
                    android:id="@+id/input_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:enabled="false"
                    android:gravity="left"
                    android:hint="@string/default_region"
                    android:inputType="textMultiLine"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:visibility="gone" />

        <TextView
            android:id="@+id/save_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/form"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:background="@drawable/grey_border_transparent_box"
            android:gravity="center"
            android:text="@string/save_profile"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form"
            android:layout_centerHorizontal="true"
            android:layout_margin="100dp"
            android:gravity="center"
            android:text="SPAACE V0.1"
            android:textSize="12sp" />

    </RelativeLayout>

</ScrollView>