<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_explore_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/ic_sms"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/sms"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="50dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/ic_email"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
