<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="Submit this form and get a personalized list of recommended interior designers, at no cost!" />

        <TextView
            android:id="@+id/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_info"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="BASIC INFO"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/box_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/basic_info"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="50"
                android:background="@drawable/grey_border_transparent_box_row"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/new_resale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/new_resale" />

                <TextView
                    android:id="@+id/new_resale_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/new_resale"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/resale"
                    android:textStyle="bold" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="50"
                android:background="@drawable/grey_border_transparent_box_row"
                android:gravity="center_horizontal"

                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/area_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/area_size" />

                <TextView
                    android:id="@+id/area_size_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/area_size"
                    android:layout_centerHorizontal="true"

                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="1000"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/box_1"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="50"
                android:background="@drawable/grey_border_transparent_box_row"
                android:gravity="center_horizontal"

                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/key_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/key_collection_periode" />

                <TextView
                    android:id="@+id/key_collection_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/key_collection"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="3 month"
                    android:textStyle="bold" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="50"
                android:background="@drawable/grey_border_transparent_box_row"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/loan_required"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/loan_required" />

                <TextView
                    android:id="@+id/loan_required_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loan_required"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="Yes"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>